--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a><i class="far fa-envelope fa-2x icon"></i>Github</a>
       </div>
     </section>
-    <footer id="main-footer">
+    <footer id="footer-main">
       <p>Copyright &copy;2019,Abdulla Al Mamun, All Rights Reserved</p>
     </footer>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
