--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
     <section id="projects">
       <h1 class="project-header">These are some of my projects</h1>
       <div class="project-details">
-        <div>
+        <div class="bal">
           <a
             ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
           /></a>
-          <h1 class="project-tile">Tribute Page</h1>
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Tribute Page
+            <span class="code">&#47;&gt;</span>
+          </p>
         </div>
         <div>
           <a
