--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
         <p>How do you take your coffee?</p>
       </div>
       <div class="social-container">
-        <a><i class="fab fa-twitter fa-2x icon"></i>Twitter</a>
-        <a><i class="fab fa-facebook-f fa-2x icon"></i>Facebook</a>
-        <a><i class="fab fa-github fa-2x icon"></i>Github</a>
+        <a><i class="fab fa-twitter  icon"></i><span>Twitter</span></a>
 
-        <a><i class="far fa-envelope fa-2x icon"></i>Github</a>
+        <a><i class="fab fa-facebook-f  icon"></i><span>Facebook</span></a>
+        <a><i class="fab fa-github  icon"></i><span>Github</span></a>
+
+        <a><i class="far fa-envelope  icon"></i><span>@Email</span></a>
       </div>
     </section>
     <footer id="footer-main">
