add animation style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="header">
       <nav class="nav-bar" id="navbar">
         <div class="person-img">
-          <img src="./img/logo.jpg" alt="mamun" />
+          <h1>MAMUN</h1>
         </div>
         <div class="nav-item">
           <ul>
@@ -42,29 +42,41 @@
           <a
             ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
           /></a>
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code">&lt;</span>
             Tribute Page
             <span class="code">&#47;&gt;</span>
           </p>
         </div>
-        <div>
+        <div class="bal">
           <a
             ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
           /></a>
-          <h1 class="project-tile">Product Landing Page</h1>
+          <p class="project-tile">
+            <span class="code">&lt;</span>
+            Product Landing Page
+            <span class="code">&#47;&gt;</span>
+          </p>
         </div>
-        <div>
-          <a id="profile-link" href="https://github.com/Mamun746"
+        <div class="bal">
+          <a
             ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
           /></a>
-          <h1 class="project-tile">Survey form</h1>
+          <p class="project-tile">
+            <span class="code">&lt;</span>
+            Survey Form
+            <span class="code">&#47;&gt;</span>
+          </p>
         </div>
-        <div>
+        <div class="bal">
           <a
-            ><img src="./img/mamun.jpg" class="projects-img" alt=" project-img"
+            ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
           /></a>
-          <h1 class="project-tile">Technical Documentation</h1>
+          <p class="project-tile">
+            <span class="code">&lt;</span>
+            Technical Documentation
+            <span class="code">&#47;&gt;</span>
+          </p>
         </div>
       </div>
     </section>
@@ -74,12 +86,18 @@
         <p>How do you take your coffee?</p>
       </div>
       <div class="social-container">
-        <a><i class="fab fa-twitter  icon"></i><span>Twitter</span></a>
-
-        <a><i class="fab fa-facebook-f  icon"></i><span>Facebook</span></a>
-        <a><i class="fab fa-github  icon"></i><span>Github</span></a>
-
-        <a><i class="far fa-envelope  icon"></i><span>@Email</span></a>
+        <a class="icon" href="#"
+          ><i class="fab fa-twitter"></i><span>Twitter</span></a
+        >
+        <a class="icon" href="#"
+          ><i class="fab fa-facebook-f"></i><span>Facebook</span></a
+        >
+        <a class="icon" href="#"
+          ><i class="fab fa-github"></i><span>Github</span></a
+        >
+        <a class="icon" href="#"
+          ><i class="far fa-envelope"></i><span>@Email</span></a
+        >
       </div>
     </section>
     <footer id="footer-main">
