--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
     <section id="projects">
       <h1 class="project-header">These are some of my projects</h1>
       <div class="project-details">
-        <div class="bal">
+        <div class="project-setting">
           <a
-            ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
+            ><img
+              src="./img/tribute.png"
+              class="projects-img"
+              alt=" project-img"
           /></a>
           <p class="project-tile">
             <span class="code">&lt;</span>
@@ -48,9 +51,12 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </div>
-        <div class="bal">
+        <div class="project-setting">
           <a
-            ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
+            ><img
+              src="./img/landing.png"
+              class="projects-img"
+              alt=" project-img"
           /></a>
           <p class="project-tile">
             <span class="code">&lt;</span>
@@ -58,9 +64,9 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </div>
-        <div class="bal">
+        <div class="project-setting">
           <a
-            ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
+            ><img src="./img/survey.png" class="projects-img" alt=" project-img"
           /></a>
           <p class="project-tile">
             <span class="code">&lt;</span>
@@ -68,9 +74,12 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </div>
-        <div class="bal">
+        <div class="project-setting">
           <a
-            ><img src="./img/logo.jpg" class="projects-img" alt=" project-img"
+            ><img
+              src="./img/documentation.png"
+              class="projects-img"
+              alt=" project-img"
           /></a>
           <p class="project-tile">
             <span class="code">&lt;</span>
@@ -79,6 +88,10 @@
           </p>
         </div>
       </div>
+      <a href="#"
+        ><button class="show-all">
+          Show All <i class="fas fa-chevron-right"></i></button
+      ></a>
     </section>
     <section id="social-link">
       <div class="social-title">
