add media query

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <div class="project-details">
         <div class="project-setting">
           <a
+            href="https://github.com/Mamun746/fcc-tribute-page"
+            target="_blank"
+            id="profile-link"
             ><img
               src="./img/tribute.png"
               class="projects-img"
@@ -53,6 +56,9 @@
         </div>
         <div class="project-setting">
           <a
+            href="https://github.com/Mamun746/fcc-landing-page"
+            target="_blank"
+            id="profile-link"
             ><img
               src="./img/landing.png"
               class="projects-img"
@@ -66,6 +72,9 @@
         </div>
         <div class="project-setting">
           <a
+            id="profile-link"
+            href="https://github.com/Mamun746/fcc-survey-form"
+            target="_blank"
             ><img src="./img/survey.png" class="projects-img" alt=" project-img"
           /></a>
           <p class="project-tile">
@@ -76,6 +85,9 @@
         </div>
         <div class="project-setting">
           <a
+            id="profile-link"
+            href="https://github.com/Mamun746/fcc-technical-documentation-page"
+            target="_blank"
             ><img
               src="./img/documentation.png"
               class="projects-img"
@@ -105,7 +117,7 @@
         <a class="icon" href="#"
           ><i class="fab fa-facebook-f"></i><span>Facebook</span></a
         >
-        <a class="icon" href="#"
+        <a class="icon" href="https://github.com/Mamun746" target="_blank"
           ><i class="fab fa-github"></i><span>Github</span></a
         >
         <a class="icon" href="#"
